<resources>
    <string name="app_name">shots</string>
    <string name="app_desc">更好的Dribbble客户端</string>
    <string name="login_call_back">dribbble-login-callback</string>
    <string name="nav_home_menu">首页</string>
    <string name="nav_explore_menu">发现</string>
    <string name="toolbar_my_likes">我喜欢的作品</string>
    <string name="nav_my_likes_menu">喜欢</string>
    <string name="nav_my_buckets_menu">我的作品集</string>
    <string name="nav_my_shots_menu">我的作品</string>
    <string name="nav_my_favorites">收藏夹</string>
    <string name="nav_settings_menu">设置</string>
    <string name="recycler_item_footer_more_loading_text">正在加载更多。。。</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="home_toolbar_title">Home</string>
    <string name="explore_toolbar_title">Explore</string>
    <string name="toolbar_date_menu_item_now">当前</string>
    <string name="toolbar_date_menu_item_past_week">一周之内</string>
    <string name="toolbar_date_menu_item_past_month">一月之内</string>
    <string name="toolbar_date_menu_item_past_year">一年之内</string>
    <string name="toolbar_date_menu_item_all_time">时间不限</string>
    <string name="toobar_overflow_small_with_infos">有说明小图</string>
    <string name="toobar_overflow_large_with_infos">有说明大图</string>
    <string name="toobar_overflow_small_without_infos">无说明小图</string>
    <string name="toobar_overflow_large_without_infos">无说明大图</string>
    <string name="expore_spinner_sort_popular">最热</string>
    <string name="expore_spinner_sort_comments">评论最多</string>
    <string name="expore_spinner_sort_recent">最新</string>
    <string name="expore_spinner_sort_views">浏览最多</string>
    <string name="explore_spinner_list_shots">作品</string>
    <string name="explore_spinner_list_animated">GIF动画</string>
    <string name="explore_spinner_list_attachments">带有附件</string>
    <string name="explore_spinner_list_debuts">首秀作品</string>
    <string name="explore_spinner_list_playoffs">赛季精品</string>
    <string name="explore_spinner_list_rebounds">二次创作</string>
    <string name="explore_spinner_list_teams">团队作品</string>
    <string name="nav_view_name_tx">登陆</string>
    <string name="nav_view_desc_tx">使用你的Dribbble帐号登陆</string>
    <string name="nav_view_login_desc_tx">点击打开我的主页</string>
    <string name="profile_logout">登出</string>
    <string name="profile_share_user_profile">分享用户资料</string>
    <string name="check_out">查看</string>
    <string name="user_profile">用户资料</string>
    <string name="are_you_sure_want_to_logout">确定你要退出登陆吗？</string>
    <string name="dialog_login_bt">登陆Dribbble</string>
    <string name="dialog_login_desc">登陆你的Dribbble帐号使用shots的全部功能</string>
    <string name="login_dialog_fragment_exception">LoginDialogFragment所在的Activity必须实现回调接口！</string>
    <string name="nav_drawer_open">open drawer</string>
    <string name="nav_drawer_close">close drawer</string>
    <string name="home_popular">最热</string>
    <string name="home_recent">最新</string>
    <string name="home_following">关注</string>
    <string name="double_back_quit">再次点击离开应用</string>
    <string name="shots_gif_tx">GIF</string>
    <string name="on_load_shots_listener_failed_msg">load dribbble shots failed</string>
    <string name="shots_create_at_time_now">刚刚</string>
    <string name="shots_create_at_time_minutes">分钟前</string>
    <string name="shots_create_at_time_hours">小时前</string>
    <string name="shots_create_at_time_one_day">昨天</string>
    <string name="shots_create_at_time_two_days">前天</string>
    <string name="shots_create_at_time_days">yyyy年MM月dd日</string>
    <string name="detail_toolbar_overflow_menu_share">分享</string>
    <string name="detail_toolbar_overflow_menu_open_in_browser">在浏览器打开</string>
    <string name="detail_toolbar_overflow_menu_download">下载</string>
    <string name="detail_toolbar_overflow_menu_share_create_chooser_title">分享</string>
    <string name="detail_toolbar_overflow_menu_share_footer_text">-- 来自shots(Android APP for Dribbble)的分享</string>
    <string name="detail_toolbar_overflow_menu_open_in_browser_create_chooser_title">请选择浏览器</string>
    <string name="detail_toolbar_overflow_menu_download_snackbar_text">正在下载</string>
    <string name="detail_likes_tv_text">喜欢</string>
    <string name="detail_comments_tv_text">评论</string>
    <string name="detail_buckets_tv_text">作品集</string>
    <string name="detail_views_tv_text">浏览</string>
    <string name="detail_attachmets_bt_text">附件</string>
    <string name="comment_reply_tv_text">回复</string>
    <string name="comment_copy_tv_text">复制</string>
    <string name="detail_likes_im_like_a_shot_snack_text">shot liked!</string>
    <string name="detail_likes_im_unlike_a_shot_snack_text">shot unliked!</string>
    <string name="on_load_detail_image_listener_failed_msg">加载失败</string>
    <string name="name">名称</string>
    <string name="description">说明</string>
    <string name="create_a_bucket">创建作品集</string>
    <string name="cancel">关闭</string>
    <string name="create">创建</string>
    <string name="snack_create_a_bucket_text">作品集已创建</string>
    <string name="choose_a_bucket">选择作品集</string>
    <string name="OK">确认</string>
    <string name="follow">关注用户</string>
    <string name="unfollow">取消关注</string>
    <string name="choosed">已选择</string>
    <string name="buckets">作品集</string>
    <string name="added_to">已加入</string>
    <string name="likes">喜欢作品</string>
    <string name="project">项目</string>
    <string name="followers">粉丝</string>
    <string name="following">关注</string>
    <string name="s">的</string>
    <string name="detail">详情</string>
    <string name="the_name_of_bucket_is_not_null">作品集名称不能为空！</string>
    <string name="no_shot_here">没 有 作 品</string>
    <string name="no_bucket_here">没 有 作 品 集</string>
    <string name="no_liked_shot_here">没 有 喜 欢 的 作 品</string>
    <string name="no_project_here">没 有 项 目</string>
    <string name="no_follower_here">没 有 粉 丝</string>
    <string name="no_following_here">没 有 关 注</string>
    <string name="no_comment_here">没有评论</string>
    <string name="an_error_just_occurred_while_connecting_to_Dribbble_try_it_again_later">在连接到Dribbble的过程中出错，请稍后重试</string>
    <string name="add_your_comment">添加评论</string>
    <string name="dialog_post_comment_text">提交评论中...</string>
    <string name="add_your_comment_403_forbidden_error_text">提交评论发生错误：账号权限需要player或则team!</string>
    <string name="comment_text_copied_in_clipboard">评论已经复制到剪贴板中</string>
    <string name="title_activity_settings">设置</string>
    <string name="settings_preference_category_advanced_settings_title">偏好设置</string>
    <string name="settings_switch_preference_night_mode_title">夜间模式</string>
    <string name="settings_switch_preference_night_mode_summary">降低视线中的白色</string>
    <string name="settings_switch_preference_double_press_to_exit_title_tv">双击退出应用</string>
    <string name="settings_switch_preference_double_press_to_exit_summary_tv">退出应用前请求许可</string>
    <string name="settings_preference_category_data_title">数据</string>
    <string name="settings_switch_preference_data_saving_mode_title">数据保存模式</string>
    <string name="settings_switch_preference_data_saving_mode_summary">在图片列表上加载低分辨率的图片以节省数据流量</string>
    <string name="settings_switch_preference_gifs_autoplay_title">自动播放</string>
    <string name="settings_switch_preference_gifs_autoplay_summary">在图片列表上自动播放GIF图片</string>
    <string name="settings_switch_preference_clear_cache_title">清除缓存</string>
    <string name="settings_switch_preference_clear_cache_summary">清除所有的图片缓存</string>
    <string name="cache_successfully_cleared">成功清除缓存！</string>
    <string name="settings_preference_category_about_title">关于</string>
    <string name="settings_preference_about_the_app_title">关于应用</string>
    <string name="settings_preference_share_the_app_title">传播爱心</string>
    <string name="settings_preference_share_the_app_summary">如果你喜欢Shots,请帮忙分享给他人！</string>
    <string name="settings_preference_share_the_app_share_text">强烈建议你试用下Shots-The Dribbble app for Andorid
    ,它确实不错</string>
    <string name="settings_preference_contact_me_title">联系我</string>
    <string name="settings_preference_contact_me_summary">给我发送邮件</string>
    <string name="email_create_chooser_title">请选择邮件应用</string>
    <string name="unfollowed_successful">已经取消关注</string>
    <string name="followed_successful">已经成功关注</string>
    <string name="unfollowed_error">取消关注出错，请重试！</string>
    <string name="followed_error">关注用户出错，可能被用户拉黑或者超出关注上限！</string>
    <string name="open_source_licenses">开源框架</string>
    <string name="gifs_auto_play_dialog_title">测试中的选项</string>
    <string name="gifs_auto_play_dialog_message">这个选项现在还不稳定，还可能造成由内存溢出引起的应用崩溃。你确定想要激活
        这个选项吗？</string>
    <string name="gifs_auto_play_dialog_negative_button_text">关闭</string>
    <string name="gifs_auto_play_dialog_positive_button_text">是的，激活</string>

    <string name="dialog_favorites_detial_sync_progress_text">同步中。。。</string>
    <string name="dialog_favorites_detial_sync_text">此功能方便手机迁移使用</string>

</resources>
