<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/overflow_date"
        android:icon="@mipmap/ic_toolbar_time_menu"
        android:title=""
        app:showAsAction="always">

        <menu xmlns:android="http://schemas.android.com/apk/res/android">
            <item
                android:id="@+id/now"
                android:title="@string/toolbar_date_menu_item_now">
            </item>

            <item
                android:id="@+id/week"
                android:title="@string/toolbar_date_menu_item_past_week">
            </item>

            <item
                android:id="@+id/month"
                android:title="@string/toolbar_date_menu_item_past_month">
            </item>

            <item
                android:id="@+id/year"
                android:title="@string/toolbar_date_menu_item_past_year">
            </item>

            <item
                android:id="@+id/allTime"
                android:title="@string/toolbar_date_menu_item_all_time">
            </item>
        </menu>

    </item>

    <item
        android:id="@+id/overflow_item_type"
        android:icon="@mipmap/ic_toolbar_overflow"
        android:title=""
        app:showAsAction="always">

        <menu>

            <item
                android:id="@+id/overflow_small"
                android:title="@string/toobar_overflow_small_with_infos"
                app:showAsAction="never">
            </item>

            <item
                android:id="@+id/overflow_large"
                android:title="@string/toobar_overflow_large_with_infos"
                app:showAsAction="never">
            </item>

            <item
                android:id="@+id/overflow_small_without_infos"
                android:title="@string/toobar_overflow_small_without_infos"
                app:showAsAction="never">
            </item>

            <item
                android:id="@+id/overflow_large_without_infos"
                android:title="@string/toobar_overflow_large_without_infos"
                app:showAsAction="never">
            </item>

        </menu>

    </item>

</menu>