<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <ImageView
        android:id="@+id/dialog_login_close_im"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_close_white_36dp"/>

    <ImageView
        android:id="@+id/dialog_login_app_icon_im"
        android:layout_width="@dimen/dialog_login_app_icon_im_ayout_width"
        android:layout_height="@dimen/dialog_login_app_icon_im_layout_height"
        android:layout_above="@+id/dialog_login_app_name_tx"
        android:layout_marginBottom="@dimen/dialog_login_app_icon_im_layout_marginBottom"
        android:layout_centerHorizontal="true"
        android:scaleType="centerCrop"
        android:src="@mipmap/ic_launcher_round"/>

    <TextView
        android:id="@+id/dialog_login_app_name_tx"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dialog_login_app_name_tx_layout_marginBottom"
        android:layout_centerInParent="true"
        android:text="@string/app_name"
        android:textColor="@android:color/white"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"/>

    <TextView
        android:id="@+id/dialog_login_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/dialog_login_desc_layout_margin"
        android:layout_marginLeft="@dimen/dialog_login_desc_layout_margin"
        android:layout_marginBottom="@dimen/dialog_login_desc_layout_marginBottom"
        android:text="@string/dialog_login_desc"
        android:textColor="@color/nav_header_desc_tx"
        android:layout_below="@+id/dialog_login_app_name_tx"
        android:layout_centerHorizontal="true"/>

    <Button
        android:id="@+id/dialog_login_bt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dialog_login_desc"
        android:paddingLeft="@dimen/dialog_login_bt_padding"
        android:paddingRight="@dimen/dialog_login_bt_padding"
        android:background="@drawable/dialog_login_shape_radius"
        android:text="@string/dialog_login_bt"
        android:layout_centerHorizontal="true"/>

    <ProgressBar
        android:id="@+id/dialog_login_pb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_below="@+id/dialog_login_desc"/>

</RelativeLayout>